# azure-foundry

./: .gitignore  README.md
.github/workflows/: ci.yml
agents/: .env.example  01_infra_triage.py  02_websearch_agent.py  03_code_interpreter_agent.py  04_openapi_agent.py  05_image_generation.py  06_mcp_agent.py  07_multi_agent.py  README.md  activities_openapi.json  bookstore_sales.csv  create-agent-fitness-coach.ipynb  pyproject.toml
bash/: test.sh
infra/terraform/: .terraform.lock.hcl  README.md  backend.hcl.example  document_intelligence.tf  image_model.tf  language.tf  main.tf  outputs.tf  providers.tf  rbac.tf  search.tf  speech.tf  terraform.tfvars.example  translator.tf  variables.tf
python/: .env.example  README.md  chat_with_openai.py  openapi_test.py  pyproject.toml
tools/: .env.example  01_speech_tool.py  02_language_tool.py  03_translation_tool.py  04_document_intelligence.py  05_search_tool.py  README.md  pyproject.toml
